--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://localhost:5432/StudentSubscriptions
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/students_test
 spring.datasource.username=postgres
 spring.datasource.password=111
